<?xml version="1.0" encoding="utf-8"?>
<!-- 
 This file is part of SmartLib Project.

    SmartLib is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SmartLib is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SmartLib.  If not, see <http://www.gnu.org/licenses/>.
    
    
	Author: Paschalis Mpeis

	Affiliation:
	Data Management Systems Laboratory 
	Dept. of Computer Science 
	University of Cyprus 
	P.O. Box 20537 
	1678 Nicosia, CYPRUS 
	Web: http://dmsl.cs.ucy.ac.cy/
	Email: dmsl@cs.ucy.ac.cy
	Tel: +357-22-892755
	Fax: +357-22-892701
    
    
    -->
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:addStatesFromChildren="false"
    android:orientation="vertical" >


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/imageViewActivityBookCover"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/bookInfo"
                android:scaleType="centerCrop"
                android:src="@drawable/nocover" />

             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="70dp"
                 android:background="#55ffffff"
                 android:orientation="vertical" >

    </LinearLayout>
            
            <TextView
                android:id="@+id/textViewActivityItemUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:layout_centerVertical="true"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="owner"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff33b5e5"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="normal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/date_"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewActivityItemAnswerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/answer_"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/isbn_"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewActivityItemDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="yesterday" />

                    <TextView
                        android:id="@+id/textViewActivityItemAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dont asnwered yet" />

                    <TextView
                        android:id="@+id/textViewActivityItemISBN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="435345345345" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewActivityItemTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:text="title of book"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff33b5e5"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewActivityItemAuthors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:text="John John, John"
        android:textSize="13sp" />

</LinearLayout>
